--- a/styleguide/source/assets/scss/05-pages/_news.scss
+++ b/styleguide/source/assets/scss/05-pages/_news.scss
@@ -106,7 +106,10 @@
     }
     &.share-row {
       border-bottom: 1px solid $gray-30;
-      padding-bottom: $gutter;
+      padding-bottom: calc($gutter/2);
+      @include breakpoint($bp-small) {
+        padding-bottom: $gutter;
+      }
       [data-region="share"] {
         margin-left: auto;
         .share-wrapper {
